# lucidgym

./: .gitignore  .gitmodules  README.md  create_responses_engine.txt  ft09_grid_data.txt  ls20_grid_data.txt  plan.md  pyproject.toml  run_harness.sbatch  run_harness_configurable.sbatch  run_harness_configurable.sh  run_harness_responses.sbatch  vc33_grid_data.txt
Agent_Context/agent_training/: CUR_IMPLEMENTATION_PLAN.md  Training_Log.md  arcagi3_env.md  arcagi3_env2.md  debug.md  implementation_plan.md  registry.md  rllm_workflow_demystify.md  textarena_countdown.md  textarena_wrapper.md
Agent_Context/merge_eval_agent/: agent_merge_profile.md  plan.md
Agent_Context/rllm/: rllm_change.md
baselines/: run_16x16_ascii.sbatch  run_16x16_raw.sbatch  run_64x64_ascii.sbatch  run_64x64_raw.sbatch  run_image.sbatch
examples/arcagi3/: eval.sh  mock_session.json  prepare_arc_agi_data.py  prepare_arcagi_data.sh  run_arc_eval.py  train.sh  train_arc_agi.py
examples/arcagi3_harness/: eval.sh  vllm_eval.sh
examples/rllm_native/: countdown.sh  train_deepscaler_8k.sh
examples/textarena/: countdown.sh  train_textarena_countdown.py
lucidgym/: __init__.py  registry.py
lucidgym.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lucidgym/agents/: __init__.py  arcagi3_agent.py  base_agent_wrapper.py  placeholder_agent.py  textarena_agent.py
lucidgym/environments/: __init__.py  placeholder_env.py  textarena_env.py
lucidgym/evaluation/: config.py  harness.py
lucidgym/metrics/: reporting.py  structures.py
lucidgym/prompts/: adaptive_prompts.py  configurable_prompts.py  memory_prompts.py  meta_prompts.py  sft_prompts.py  text_prompts.py  visual_memory_prompts.py
lucidgym/utils/: grid_processing.py  grid_processing_old.py  inspect_api.py  openai_client.py  representation.py
lucidgym/workflows/: __init__.py  (+1 more)
(+105 files in other folders)
