[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lucidgym"
version = "0.1.0"
description = "LucidGym extensions that plug into the rLLM agent/environment stack."
readme = "README.md"
authors = [
    { name = "LucidGym authors" },
]
requires-python = ">=3.10"
keywords = ["rl", "language-models", "textarena"]
dependencies = [
    "hydra-core>=1.3",
    "pydantic>=2.5",
    "requests>=2.31",
    "textarena>=0.0.8",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lucidgym", "lucidgym.*"]
exclude = ["examples*", "rllm*", "Agent_Context*"]
